# clipcloud

./: .gitignore  README.md  build.ps1  run.ps1
client/: package-lock.json  package.json
client/src/: App.css  App.tsx  index.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: commands.rs  crypto.rs  lib.rs  models.rs  storage.rs
openspec/changes/archive/2026-04-18-add-private-clipboard-vault/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-18-add-private-clipboard-vault/specs/device-enrollment-and-trust/: spec.md
openspec/changes/archive/2026-04-18-add-private-clipboard-vault/specs/encrypted-cloud-sync/: spec.md
openspec/changes/archive/2026-04-18-add-private-clipboard-vault/specs/local-clipboard-history/: spec.md
openspec/changes/archive/2026-04-18-add-private-clipboard-vault/specs/single-owner-server-bootstrap/: spec.md
openspec/specs/device-enrollment-and-trust/: spec.md
openspec/specs/encrypted-cloud-sync/: spec.md
openspec/specs/local-clipboard-history/: spec.md
openspec/specs/single-owner-server-bootstrap/: spec.md
server/: Cargo.toml
server/src/: main.rs
