[package]
name = "clipcloud-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
base64 = "0.22.1"
dotenvy = "0.15.7"
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["postgres", "runtime-tokio-rustls", "uuid", "time", "derive"] }
time = { version = "0.3.44", features = ["formatting", "macros", "parsing", "serde", "serde-well-known"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
