[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
age = { version = "0.11.1", default-features = false, features = ["armor"] }
arboard = "3.6.1"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
dirs = "6.0.0"
log = "0.4"
rand = "0.8.5"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
time = { version = "0.3.44", features = ["formatting", "macros", "parsing", "serde-well-known"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
